# sentinel-orm

./: .env.example  .env.production  .gitignore  CACHE_FIX_INSTRUCTIONS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  Dockerfile  FIXES_SUMMARY.md  README.md  SENTINEL_CLIENT_VALUE_PROPOSITION.txt  SENTINEL_MOAT_INSIGHTS_AND_SIMULATE.md  alembic.ini  debug_clickhouse.py  deploy.ps1  deploy.sh  docker-compose.prod.yml  docker-compose.yml  nixpacks.toml  pyproject.toml  render.yaml  requirements.txt
.agent/workflows/: deploy-railway.md  deploy-render.md  deploy.md
app/: __init__.py  config.py  main.py
app/api/v1/: brand_health.py  risk_alerts.py  sentiment.py  source_insights.py
app/core/: exceptions.py  logging.py
app/db/: clickhouse.py  postgres.py  redis.py
app/models/postgres/: __init__.py  action_log.py  brand.py  source.py  user.py
app/services/ingestion/: __init__.py  kafka_consumer.py  kafka_producer.py  scrapers.py  signal_processor.py
app/services/ml/: brand_health.py  credibility_model.py  emotion_model.py  feature_extractor.py  llm_visibility.py  sentiment_model.py  source_insights.py
docs/: CLIENT_OVERVIEW.md  CLOUD_DEPLOYMENT_GUIDE.md
frontend/: app.js  index.html  style.css
migrations/clickhouse/: init_db.py  schemas.py
migrations/postgres/: env.py
migrations/postgres/versions/: .gitkeep  20260122_2242_11cd2ecff2c9_initial_migration.py
ml/models/: .gitkeep
nginx/: nginx.conf
scripts/: ingest_example.py  run_live_ingestion.py  setup-cloud-deployment.ps1  test_system.py  truncate_clickhouse.py
